// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders correctly 1`] = `
<DocumentFragment>
  .cache-1yrf4lq-StyledTable {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
}

.cache-14vf537-StyledHead {
  border: 0;
  border-bottom-width: 1px;
  border-color: #d4dae7;
  border-style: solid;
}

.cache-1xbkkcn-StyledRow-StyledRow {
  color: #4a4f62;
}

.cache-1xbkkcn-StyledRow-StyledRow a {
  color: inherit;
}

.cache-1xbkkcn-StyledRow-StyledRow tr:nth-of-type(even) {
  background-color: #ffffff;
}

.cache-1xbkkcn-StyledRow-StyledRow:hover {
  color: #390171;
}

.cache-1xbkkcn-StyledRow-StyledRow:hover td:first-of-type {
  font-weight: 500;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-1xbkkcn-StyledRow-StyledRow [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.cache-1xbkkcn-StyledRow-StyledRow:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.cache-10t8oi4-StyledHeadCell-cellStyle {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  color: #b2b6c3;
  text-align: left;
  padding: 8px 16px;
  font-size: 14px;
  line-height: 20px;
}

.cache-fhczmp-StyledBodyCell-cellStyle {
  overflow: hidden;
  white-space: nowrap;
  padding: 8px 16px;
  font-size: 14px;
  line-height: 20px;
}

<table
    class="cache-1yrf4lq-StyledTable efhaznt5"
  >
    <thead
      class="cache-14vf537-StyledHead efhaznt4"
    >
      <tr
        class="cache-1xbkkcn-StyledRow-StyledRow efhaznt3"
      >
        <th
          class="cache-10t8oi4-StyledHeadCell-cellStyle efhaznt2"
        >
          ID
        </th>
        <th
          class="cache-10t8oi4-StyledHeadCell-cellStyle efhaznt2"
        >
          Status
        </th>
        <th
          class="cache-10t8oi4-StyledHeadCell-cellStyle efhaznt2"
        >
          Date
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="cache-1xbkkcn-StyledRow-StyledRow efhaznt3"
      >
        <td
          class="cache-fhczmp-StyledBodyCell-cellStyle efhaznt1"
        >
          165
        </td>
        <td
          class="cache-fhczmp-StyledBodyCell-cellStyle efhaznt1"
        >
          Ongoing
        </td>
        <td
          class="cache-fhczmp-StyledBodyCell-cellStyle efhaznt1"
        >
          Yesterday
        </td>
      </tr>
      <tr
        class="cache-1xbkkcn-StyledRow-StyledRow efhaznt3"
      >
        <td
          class="cache-fhczmp-StyledBodyCell-cellStyle efhaznt1"
        >
          56
        </td>
        <td
          class="cache-fhczmp-StyledBodyCell-cellStyle efhaznt1"
        >
          Resolved
        </td>
        <td
          class="cache-fhczmp-StyledBodyCell-cellStyle efhaznt1"
        >
          1 hour ago
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Table renders correctly while loading 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-1yrf4lq-StyledTable {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
}

.cache-14vf537-StyledHead {
  border: 0;
  border-bottom-width: 1px;
  border-color: #d4dae7;
  border-style: solid;
}

.cache-1xbkkcn-StyledRow-StyledRow {
  color: #4a4f62;
}

.cache-1xbkkcn-StyledRow-StyledRow a {
  color: inherit;
}

.cache-1xbkkcn-StyledRow-StyledRow tr:nth-of-type(even) {
  background-color: #ffffff;
}

.cache-1xbkkcn-StyledRow-StyledRow:hover {
  color: #390171;
}

.cache-1xbkkcn-StyledRow-StyledRow:hover td:first-of-type {
  font-weight: 500;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-1xbkkcn-StyledRow-StyledRow [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.cache-1xbkkcn-StyledRow-StyledRow:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.cache-10t8oi4-StyledHeadCell-cellStyle {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  color: #b2b6c3;
  text-align: left;
  padding: 8px 16px;
  font-size: 14px;
  line-height: 20px;
}

.cache-fhczmp-StyledBodyCell-cellStyle {
  overflow: hidden;
  white-space: nowrap;
  padding: 8px 16px;
  font-size: 14px;
  line-height: 20px;
}

.cache-hfqqsp-LoaderWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-top: 16px;
}

.cache-gqzzce-Loader {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<table
    class="cache-1yrf4lq-StyledTable efhaznt5"
  >
    <thead
      class="cache-14vf537-StyledHead efhaznt4"
    >
      <tr
        class="cache-1xbkkcn-StyledRow-StyledRow efhaznt3"
      >
        <th
          class="cache-10t8oi4-StyledHeadCell-cellStyle efhaznt2"
        >
          ID
        </th>
        <th
          class="cache-10t8oi4-StyledHeadCell-cellStyle efhaznt2"
        >
          Date
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="cache-1xbkkcn-StyledRow-StyledRow efhaznt3"
      >
        <td
          class="cache-fhczmp-StyledBodyCell-cellStyle efhaznt1"
          colspan="2"
        >
          <div
            class="cache-hfqqsp-LoaderWrapper efhaznt0"
          >
            <svg
              aria-label="Loading"
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="20"
              aria-valuetext="20%"
              class="cache-gqzzce-Loader"
              role="progressbar"
              style="height: 40px; width: 40px;"
              viewBox="0 0 100 100"
            >
              <circle
                cx="50"
                cy="50"
                fill="none"
                r="42"
                stroke="#d4dae7"
                stroke-width="16"
              />
              <circle
                class="cache-11f05l0-Loader"
                cx="50"
                cy="50"
                fill="none"
                r="42"
                stroke="#4f0599"
                stroke-dasharray="263.89378290154264"
                stroke-dashoffset="211.11502632123413"
                stroke-linecap="round"
                stroke-width="16"
              />
            </svg>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
